test/compile-fail/resolution/use-nested-private-mod/top.rhdl
mod a {
    pub mod b {
        mod c {}
    }
}

use a::b::c;
